Implement version info

--- a/SudokuSolverApp/MainWindow.xaml
+++ b/SudokuSolverApp/MainWindow.xaml
@@ -5,14 +5,23 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SudokuSolverApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="400" WindowStartupLocation="CenterScreen" Background="Black">
+        Title="SudokuSolver" Height="470" Width="400" WindowStartupLocation="CenterScreen" Background="Black">
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="20"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="25"/>
         </Grid.RowDefinitions>
-        <Grid x:Name="playingFieldGrid"/>
-        <DockPanel Grid.Row="1">
+        <Menu>
+            <MenuItem Header="_Menu">
+                <MenuItem Header="_About" x:Name="menuAbout" Click="menuAbout_Click"/>
+                <Separator/>
+                <MenuItem Header="_Quit" x:Name="menuQuit" Click="menuQuit_Click"/>
+            </MenuItem>
+        </Menu>
+
+        <Grid Grid.Row="1" x:Name="playingFieldGrid"/>
+        <DockPanel Grid.Row="2">
             <Button x:Name="ClearButton" Content="Clear" DockPanel.Dock="Right" Click="ClearButton_Click"/>
             <Button x:Name="SolveButton" Content="Solve" DockPanel.Dock="Left"  Click="SolveButton_Click"/>
         </DockPanel>
