--- a/SudokuSolverApp/ResultWindow.xaml
+++ b/SudokuSolverApp/ResultWindow.xaml
@@ -6,8 +6,7 @@
         xmlns:local="clr-namespace:SudokuSolverApp"
         mc:Ignorable="d"
         Title="ResultWindow" Height="425" Width="400" Background="Black" Loaded="Window_Loaded">
-    <Grid>
+    <Grid x:Name="MainGrid">
         <TextBlock Text="Trying to solve..." Foreground="White"/>
-        <Grid x:Name="resultGrid"/>
     </Grid>
 </Window>
